--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="https://farmanara.github.io/rock-paper-scissors"> <img src="./images/rock-paper-scissors.png"> </a>
             </div>
         <div id="project3" class="project-tile">
-                <a href="https://farmanara.github.io/doc-page/"> <img src="./images/survey-form.png"></a>
+                <a href="https://farmanara.github.io/survey-form/"> <img src="./images/survey-form.png"></a>
             </div>
         <div id="project4" class="project-tile"> 
               
