--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         <div id="project4" class="project-tile"> 
               
-                <a href="https://farmanara.github.io/sketch-board/"> <img src="./images/sketch-board-tile.png"> </a>
+                <a href="https://farmanara.github.io/etch-a-sketch/"> <img src="./images/sketch-board-tile.png"> </a>
             </div>
     </section>
 
